--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-upper-nav></app-upper-nav>
 <app-navbar></app-navbar>
-<app-hero-section [slides]="slides"></app-hero-section>
-
+<app-hero-section ></app-hero-section>
+<app-service></app-service>
 <router-outlet></router-outlet>
