--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,6 @@
+<div class="navbar-container">
 <nav class="navbar">
+
   <div class="logo">
     <img src="../../assets/logo2.png" alt="Zain Clouds Logo" />
     <!-- <span>Zain Clouds</span> -->
@@ -28,4 +30,6 @@
   <div class="hamburger" (click)="toggleMenu()">
     <i class="fas fa-bars"></i>
   </div>
+
 </nav>
+</div>
