--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-navbar></app-navbar>
 <app-hero-section ></app-hero-section>
 <app-service></app-service>
+<app-process></app-process>
 <router-outlet></router-outlet>
