--- a/src/app/hero-section/hero-section.component.html
+++ b/src/app/hero-section/hero-section.component.html
@@ -1,6 +1,5 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
-
 <div class="hero-container">
   <div class="hero-text">
     <span>We Create Mobile and Web</span>
@@ -8,6 +7,16 @@
     <span>Their Lives On The Go</span>
   </div>
   <div class="hero-image">
+
+      <div data-layer="Line 1" class="Line1"></div>
+      <div data-layer="Line 2" class="Line2"></div>
+      <div data-layer="Line 3" class="Line3"></div>
+      <div data-layer="Line 4" class="Line4"></div>
+      <div data-layer="Line 5" class="Line5"></div>
+      <div data-layer="Line 6" class="Line6"></div>
+      <div data-layer="Line 7" class="Line7"></div>
+
     <img src="../../assets/iPhone 15 Pro (1).png">
-  </div>
 </div>
+  </div>
+
