--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -2,5 +2,44 @@
   <div class="service-content">
     <h2 class="service-title">Our Services</h2>
     <p class="service-description">We have Passionate, Creative, Experienced Developers</p>
+    <div class="rectangle1">
+      <img src="../../assets/iPhone 13.png">
+      <h4>App Development</h4>
+    </div>
+    <div class="rectangle2">
+      <img src="../../assets/iPhone 15 Pro Portrait Mockup.png">
+      <h4>Visual Design</h4>
+    </div>
+    <div class="rectangle3">
+      <img src="../../assets/iPhone 12 Pro.png">
+      <h4>App Design</h4>
+    </div>
+    <div class="Service-text">
+      The software <br>
+       we build<br>
+       takes our<br>
+        clients the next level
+    <img src="../../assets/iPhone 12 Pro.png">
+
+    </div>
+    <div class="ending-text">
+      <h4>
+        Zain Clouds is a software house. We offer our services in web designing, CRM systems, IT, SEO, and mobile app development.
+        <br>
+        Zain Clouds PVT Limited (<span class="license-label">License No</span> – <span class="license-number">0108170</span>)
+      </h4>
+    </div>
+
+    <div class="rectangle4">
+      <h3>Our Design and Development process</h3>
+
+    </div>
+    <div class="main-text">
+      <h4>We Plan, Design, & Develop Websites from start to finish, ensuring a high ROI for<br>
+         clients, Our Major concern is the Reliability of Website and Applictions</h4>
+    </div>
+
   </div>
+
+
 </div>
