--- a/src/styles.css
+++ b/src/styles.css
@@ -8,5 +8,5 @@
 /* Apply a linear gradient background */
 body {
   background: linear-gradient(to bottom, rgba(194, 147, 255, 1), rgba(39, 39, 40, 1));
-  height: 100vh; /* Ensures the gradient covers the full viewport height */
+  /* Ensures the gradient covers the full viewport height */
 }
