--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -140,6 +140,7 @@
   margin-left: 21px;
   text-align: center;
   transition: all 0.3s ease;
+  margin-top: -8px;
 }
 
 .navbar .login-button .btn:hover {
